--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.3",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.2.3",
-    "@angular/compiler": "~10.2.3",
-    "@angular/core": "~10.2.3",
-    "@angular/forms": "~10.2.3",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~10.2.3",
-    "@angular/platform-browser-dynamic": "~10.2.3",
-    "@angular/router": "~10.2.3",
+    "@angular/animations": "~10.1.2",
+    "@angular/cdk": "^10.2.3",
+    "@angular/common": "~10.1.2",
+    "@angular/compiler": "~10.1.2",
+    "@angular/core": "~10.1.2",
+    "@angular/forms": "~10.1.2",
+    "@angular/material": "^10.2.3",
+    "@angular/platform-browser": "~10.1.2",
+    "@angular/platform-browser-dynamic": "~10.1.2",
+    "@angular/router": "~10.1.2",
+    "date-fns": "^2.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.3",
     "zone.js": "~0.11.3"
