--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ronda-warehouse",
+  "name": "ronda-web",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -24,15 +24,15 @@
     "date-fns": "^2.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.3",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.2",
     "@angular/cli": "~10.1.2",
     "@angular/compiler-cli": "~10.1.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
