--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "admin-on-rest": "^1.4.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
-    "ra-data-json-server": "^3.12.1",
+    "ra-data-json-server": "^3.12.4",
+    "ra-data-simple-rest": "^3.10.4",
+    "ra-jsonapi-client": "^0.7.2",
     "react": "^17.0.1",
     "react-admin": "^3.12.1",
     "react-bootstrap": "^1.4.3",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-jwt": "^1.1.2",
@@ -29,7 +34,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "--port 3000"
   },
   "eslintConfig": {
     "extends": [
